stateDiagram-v2
    %% State Machine - 15 States, 67 Transitions
    %% Hệ thống qlNCKH - Workflow Quản lý Đề tài NCKH

    [*] --> DRAFT: Tạo đề tài mới

    %% ========================================
    %% PHASE A: PROPOSAL SUBMISSION & REVIEW
    %% ========================================

    DRAFT --> FACULTY_REVIEW: SUBMIT<br/>(Giảng viên nộp)
    DRAFT --> CANCELLED: CANCEL<br/>(Giảng viên hủy)

    FACULTY_REVIEW --> SCHOOL_SELECTION_REVIEW: APPROVE<br/>(Khoa duyệt)
    FACULTY_REVIEW --> CHANGES_REQUESTED: RETURN<br/>(Khoa yêu cầu sửa)
    FACULTY_REVIEW --> REJECTED: REJECT<br/>(Khoa/BGH từ chối)
    FACULTY_REVIEW --> WITHDRAWN: WITHDRAW<br/>(Giảng viên rút)
    FACULTY_REVIEW --> PAUSED: PAUSE<br/>(KHCN tạm dừng)

    SCHOOL_SELECTION_REVIEW --> OUTLINE_COUNCIL_REVIEW: ASSIGN_COUNCIL<br/>(KHCN phân công HĐ)
    SCHOOL_SELECTION_REVIEW --> REJECTED: REJECT<br/>(KHCN/BGH từ chối)
    SCHOOL_SELECTION_REVIEW --> WITHDRAWN: WITHDRAW<br/>(Giảng viên rút)
    SCHOOL_SELECTION_REVIEW --> PAUSED: PAUSE<br/>(KHCN tạm dừng)

    OUTLINE_COUNCIL_REVIEW --> APPROVED: APPROVE<br/>(HĐ/BGH duyệt)
    OUTLINE_COUNCIL_REVIEW --> CHANGES_REQUESTED: RETURN<br/>(HĐ yêu cầu sửa)
    OUTLINE_COUNCIL_REVIEW --> REJECTED: REJECT<br/>(BGH từ chối)
    OUTLINE_COUNCIL_REVIEW --> WITHDRAWN: WITHDRAW<br/>(Giảng viên rút)
    OUTLINE_COUNCIL_REVIEW --> PAUSED: PAUSE<br/>(KHCN tạm dừng)

    %% ========================================
    %% PHASE B: CHANGES & APPROVAL
    %% ========================================

    CHANGES_REQUESTED --> FACULTY_REVIEW: RESUBMIT<br/>(Nộp lại ở bước Khoa)
    CHANGES_REQUESTED --> SCHOOL_SELECTION_REVIEW: RESUBMIT<br/>(Nộp lại ở bước KHCN)
    CHANGES_REQUESTED --> OUTLINE_COUNCIL_REVIEW: RESUBMIT<br/>(Nộp lại ở bước HĐ)
    CHANGES_REQUESTED --> REJECTED: REJECT<br/>(Từ chối)
    CHANGES_REQUESTED --> WITHDRAWN: WITHDRAW<br/>(Giảng viên rút)
    CHANGES_REQUESTED --> PAUSED: PAUSE<br/>(KHCN tạm dừng)

    APPROVED --> IN_PROGRESS: START_PROJECT<br/>(Bắt đầu thực hiện)
    APPROVED --> PAUSED: PAUSE<br/>(KHCN tạm dừng)

    %% ========================================
    %% PHASE C: EXECUTION
    %% ========================================

    IN_PROGRESS --> FACULTY_ACCEPTANCE_REVIEW: SUBMIT_ACCEPTANCE<br/>(Nộp nghiệm thu)
    IN_PROGRESS --> PAUSED: PAUSE<br/>(KHCN tạm dừng)

    %% ========================================
    %% PHASE D: ACCEPTANCE REVIEW
    %% ========================================

    FACULTY_ACCEPTANCE_REVIEW --> SCHOOL_ACCEPTANCE_REVIEW: FACULTY_ACCEPT<br/>(Khoa nghiệm thu)
    FACULTY_ACCEPTANCE_REVIEW --> CHANGES_REQUESTED: RETURN<br/>(Khoa yêu cầu sửa)
    FACULTY_ACCEPTANCE_REVIEW --> PAUSED: PAUSE<br/>(KHCN tạm dừng)

    SCHOOL_ACCEPTANCE_REVIEW --> HANDOVER: ACCEPT<br/>(KHCN nghiệm thu)
    SCHOOL_ACCEPTANCE_REVIEW --> CHANGES_REQUESTED: RETURN<br/>(KHCN yêu cầu sửa)
    SCHOOL_ACCEPTANCE_REVIEW --> PAUSED: PAUSE<br/>(KHCN tạm dừng)

    %% ========================================
    %% PHASE E: HANDOVER & COMPLETION
    %% ========================================

    HANDOVER --> COMPLETED: FINALIZE<br/>(Hoàn tất bàn giao)
    HANDOVER --> COMPLETED: HANDOVER_COMPLETE<br/>(Hoàn thành bàn giao)
    HANDOVER --> PAUSED: PAUSE<br/>(KHCN tạm dừng)

    %% ========================================
    %% PAUSE/RESUME (Epic 9.3)
    %% ========================================

    PAUSED --> FACULTY_REVIEW: RESUME
    PAUSED --> SCHOOL_SELECTION_REVIEW: RESUME
    PAUSED --> OUTLINE_COUNCIL_REVIEW: RESUME
    PAUSED --> CHANGES_REQUESTED: RESUME
    PAUSED --> APPROVED: RESUME
    PAUSED --> IN_PROGRESS: RESUME
    PAUSED --> FACULTY_ACCEPTANCE_REVIEW: RESUME
    PAUSED --> SCHOOL_ACCEPTANCE_REVIEW: RESUME
    PAUSED --> HANDOVER: RESUME

    %% ========================================
    %% TERMINAL STATES
    %% ========================================

    COMPLETED --> [*]
    CANCELLED --> [*]
    REJECTED --> [*]
    WITHDRAWN --> [*]

    %% ========================================
    %% NOTES
    %% ========================================

    note right of DRAFT
        Trạng thái khởi tạo
        Giảng viên soạn thảo
    end note

    note right of CHANGES_REQUESTED
        Trạng thái yêu cầu chỉnh sửa
        SLA pause khi chờ PI sửa
        Resume khi PI nộp lại
    end note

    note right of PAUSED
        Trạng thái tạm dừng
        Chỉ PHONG_KHCN được PAUSE
        Chỉ PHONG_KHCN được RESUME
        SLA dừng tính khi PAUSED
    end note

    note right of COMPLETED
        Trạng thái kết thúc thành công
        Terminal state
    end note

    note right of CANCELLED
        Hủy từ DRAFT
        Terminal state
    end note

    note right of REJECTED
        Từ chối bởi Khoa/KHCN/BGH
        Terminal state
    end note

    note right of WITHDRAWN
        Giảng viên rút đề tài
        Terminal state
    end note

    %% ========================================
    %% STATE STYLING
    %% ========================================

    classDef draftStyle fill:#9e9e9e,stroke:#616161,stroke-width:2px,color:#000
    classDef reviewStyle fill:#2196f3,stroke:#1565c0,stroke-width:2px,color:#fff
    classDef changesStyle fill:#ff9800,stroke:#e65100,stroke-width:2px,color:#000
    classDef approvedStyle fill:#4caf50,stroke:#2e7d32,stroke-width:2px,color:#fff
    classDef progressStyle fill:#00bcd4,stroke:#006064,stroke-width:2px,color:#fff
    classDef acceptanceStyle fill:#9c27b0,stroke:#4a148c,stroke-width:2px,color:#fff
    classDef handoverStyle fill:#3f51b5,stroke:#1a237e,stroke-width:2px,color:#fff
    classDef completedStyle fill:#4caf50,stroke:#1b5e20,stroke-width:3px,color:#fff
    classDef pausedStyle fill:#757575,stroke:#424242,stroke-width:2px,color:#fff
    classDef cancelledStyle fill:#9e9e9e,stroke:#212121,stroke-width:2px,color:#fff
    classDef rejectedStyle fill:#d32f2f,stroke:#b71c1c,stroke-width:2px,color:#fff
    classDef withdrawnStyle fill:#795548,stroke:#3e2723,stroke-width:2px,color:#fff

    class DRAFT draftStyle
    class FACULTY_REVIEW,SCHOOL_SELECTION_REVIEW,OUTLINE_COUNCIL_REVIEW reviewStyle
    class CHANGES_REQUESTED changesStyle
    class APPROVED approvedStyle
    class IN_PROGRESS progressStyle
    class FACULTY_ACCEPTANCE_REVIEW,SCHOOL_ACCEPTANCE_REVIEW acceptanceStyle
    class HANDOVER handoverStyle
    class COMPLETED completedStyle
    class PAUSED pausedStyle
    class CANCELLED cancelledStyle
    class REJECTED rejectedStyle
    class WITHDRAWN withdrawnStyle
